      both become "event_action", the variables become $event_name, $event_data
      and $event_defer_errno.  There is a new variable $verify_mode, usable in
      routers, transports and related events.  The tls:cert event is now also
      raised for inbound connections, if the main configuration event_action
      option is defined.


Exim version 4.84
-----------------
TL/01 Bugzilla 1506: Re-add a 'return NULL' to silence complaints from static
      checkers that were complaining about end of non-void function with no
      return.

JH/01 Bug 1513: Fix parsing of quoted parameter values in MIME headers.
      This was a regression intruduced in 4.83 by another bugfix.

JH/02 Fix broken compilation when EXPERIMENTAL_DSN is enabled.

TL/02 Bug 1509: Fix exipick for enhanced spoolfile specification used when
      EXPERIMENTAL_DSN is enabled.  Fix from Wolfgang Breyha.


Exim version 4.83
-----------------

TF/01 Correctly close the server side of TLS when forking for delivery.

      When a message was received over SMTP with TLS, Exim failed to clear up
      the incoming connection properly after forking off the child process to
      deliver the message. In some situations the subsequent outgoing
      delivery connection happened to have the same fd number as the incoming
      connection previously had. Exim would try to use TLS and fail, logging
      a "Bad file descriptor" error.

TF/02 Portability fix for building lookup modules on Solaris when the xpg4
      utilities have not been installed.

JH/01 Fix memory-handling in use of acl as a conditional; avoid free of
      temporary space as the ACL may create new global variables.

TL/01 LDAP support uses per connection or global context settings, depending
      upon the detected version of the libraries at build time.

TL/02 Experimental Proxy Protocol support: allows a proxied SMTP connection
      to extract and use the src ip:port in logging and expansions as if it